# MIROFISH_LOCAL_ENGLISH

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json
backend/: pyproject.toml  requirements.txt  run.py  tmp_insight_forge_debug.py
backend/app/: __init__.py  config.py  settings.py
backend/app/api/: __init__.py  graph.py  report.py  setup.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: __init__.py  graph_builder.py  lightrag_client.py  lightrag_clientx.py  lightrag_entity_reader.py  lightrag_graph_memory_updater.py  lightrag_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: file_parser.py  id_validator.py  llm_client.py  logger.py  retry.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/api/: index.js  report.js  setup.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/router/: index.js
frontend/src/store/: pendingUpload.js  setupStatus.js  theme.js
frontend/src/utils/: sanitize.js
frontend/src/views/: Home.vue  InteractionView.vue  (+6 more)
