[project]
name = "mirofish-backend"
version = "0.1.0"
description = "MiroFish - A versatile swarm intelligence engine for prediction"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # Core framework
    "flask>=3.0.0",
    "flask-cors>=6.0.0",

    # LLM — OpenAI-compatible SDK (points to Ollama or any OpenAI-compatible endpoint)
    "openai>=1.0.0",

    # LightRAG — local GraphRAG, replaces Zep Cloud
    "lightrag-hku>=1.3.0",
    "networkx>=3.0",
    "ollama>=0.6.0",

    # OASIS — social media simulation framework
    "camel-oasis==0.2.5",
    "camel-ai==0.2.78",

    # File processing
    "PyMuPDF>=1.24.0",
    # Encoding detection for non-UTF-8 text files
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",

    # JSON repair for malformed LLM outputs
    "json-repair>=0.30.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
